--- a/Blog/Blog/Web.config
+++ b/Blog/Blog/Web.config
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DataContext" connectionString="data source=localhost;initial catalog=Blog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--a database file(mdf, ldf) will be created in App_Data folder of the project and attach to SQL Server-->
+    <add name="DataContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Lifelog.mdf;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--If you prefer to create a database file to SQL Server, use this conection string instead. Data souce should be modified based on your environment-->
+  <!--<add name="DataContext" connectionString="data source=localhost;initial catalog=Blog;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
