Added table on the database for blog Description

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,6 @@ Blog/Blog/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.
 /Blog/Blog.Tests/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 Blog/.vs/Blog/v14/.suo
 Blog/.vs/Blog/v14/.suo
+/Blog/Blog/App_Data/Lifelog_log.ldf
+/Blog/Blog/App_Data/Lifelog.mdf
+/Blog/Blog/obj/Debug/DesignTimeResolveAssemblyReferences.cache
