--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ Blog/.vs/Blog/v14/.suo
 /Blog/Blog/obj/Debug/DesignTimeResolveAssemblyReferences.cache
 /Blog/Blog.Tests/obj/Debug/Blog.Tests.csprojResolveAssemblyReference.cache
 /Blog/Blog.Tests/obj/Debug/Blog.Tests.csproj.FileListAbsolute.txt
+Blog/Blog.Tests/obj/Debug/build.force
